--- a/index.html
+++ b/index.html
@@ -21,19 +21,7 @@
             <input type="time" id="endTime" required>
             <button onclick="addProject()">Add Project</button>
         </div>
-        <h2>Your Projects</h2>
-        <div class="projects-grid" id="projectsGrid"></div>
-    </div>
-
-    <div id="projectDetailModal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn" onclick="closeModal()">&times;</span>
-            <h2 id="modalTitle"></h2>
-            <p id="modalDescription"></p>
-            <p><strong>Technology:</strong> <span id="modalTechnology"></span></p>
-            <p><strong>Start:</strong> <span id="modalStart"></span></p>
-            <p><strong>End:</strong> <span id="modalEnd"></span></p>
-        </div>
+        <a href="projects.html" class="view-projects">View Projects</a>
     </div>
 
     <script src="script.js"></script>
